src/_sass/components/_chat.scss
#chat-button-container {
    position: fixed;
    bottom: 2rem;
    right: 2rem;
    width: fit-content;
    min-width: 3rem;
    display: flex;
    flex-direction: row-reverse;
    overflow: hidden;
    border-radius: 0.25rem;
    @include noselect();
    z-index: 1500;

    #chat-button {
        width: 48px;
        height: 48px;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        background-color: $vinho-000;
        border-radius: 4px;
        position: relative;
        z-index: 1010;
        transition: filter 0.15s ease-in-out;

        > svg > path {
            filter: opacity(0.8);
        }

        &:hover {
            cursor: pointer;
            filter: saturate(0.8);

            > svg > path {
                filter: opacity(1);
            }
        }
    }

    .chat-button-text {
        visibility: hidden;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        width: 16.5rem;
        margin: 0 -268px 0 0;
        border: solid 0.05rem $cinza-200;
        border-top-left-radius: 4px;
        border-bottom-left-radius: 4px;
        transition: margin 0.2s ease-in-out, visibility 0.2s ease-in-out, filter 0.2s ease-in-out;
        background-color: rgba(255, 255, 255, 0.6);
        backdrop-filter: blur(0.25rem);
        z-index: 1000;

        > span {
            @include btn-font();
            text-transform: uppercase;
            letter-spacing: 0.0313rem;
        }
    }

    &:hover {
        cursor: pointer;

        .chat-button-text {
            visibility: visible;
            margin: 0 -4px 0 0;
        }
    }
}

.chat-container {
    width: 22.5rem;
    background-color: $branco-000;
    border: solid 0.8px $cinza-000;
    border-radius: 0.25rem;
    position: fixed;
    bottom: 2rem;
    right: 2rem;
    z-index: 1000;
    height: 32rem;
    transform: scaleY(0);
    transition: transform 0.3s ease-in-out, height 0.3s ease-in-out;
    transition-delay: 1s;
    display: flex;
    flex-direction: column;

    .chat-header,
    .chat-footer {
        height: 4rem;
        width: 100%;
        display: flex;
        flex-direction: row;
        align-items: center;
        // justify-content: center;
    }

    .chat-header {
        border-bottom: 0.05rem solid $cinza-000;
        padding: 1rem;
        @include noselect();

        span {
            width: 100%;
            @include links();
            color: $cinza-400;
            text-align: center;
        }

        svg {
            position: absolute;

            path {
                transition: fill 0.15s ease-in-out;
            }

            &:hover {
                cursor: pointer;

                path {
                    fill: $preto-000;
                }
            }
        }
    }

    .chat-footer {
        border-top: 0.05rem solid $cinza-000;
        padding: 0.5rem;

        input[type="text"] {
            flex: 1;
            min-height: 3rem;
            border-radius: 0.25rem;
            border: 0.05rem solid $cinza-000;
            padding: 0 0.5rem;
            transition: border 0.15s ease-in-out;
            @include body1();

            &:focus {
                border: 0.05rem solid $cinza-400;
                outline: none;
            }
        }

        #send-button {
            width: 3rem;
            height: 3rem;
            display: flex;
            flex-direction: column;
            align-items: center;
            justify-content: center;
            background-color: $vinho-000;
            border-radius: 4px;
            position: relative;
            z-index: 1010;
            border: none;
            margin-left: 0.5rem;
            transition: filter 0.15s ease-in-out;
            outline: none;
            &:hover {
                cursor: pointer;
                filter: saturate(0.8);

                > svg > path {
                    filter: opacity(1);
                }
            }
        }

        .disabled {
            filter: saturate(0.8);
            cursor: default !important;
        }
    }

    .chat-dialog {
        flex: 1;
        overflow-y: scroll;
        padding: 0.5rem;
        display: flex;
        flex-direction: column;

        >span{
            width: 100%;
            text-align: center;
            @include caption();
            @include noselect();
            margin: .5rem 0 1rem 0;
            color: $cinza-400;
        }

        &::-webkit-scrollbar {
            width: .5rem;
        }
        &::-webkit-scrollbar-track {
            background: $branco-000;
        }
        &::-webkit-scrollbar-thumb {
            background: $cinza-000;
        }
        &::-webkit-scrollbar-thumb:hover {
            background: $cinza-200;
        }

        .dialog-container{
            min-width: 7rem;
            max-width: 18rem;
            height: fit-content;
            width: fit-content;
            padding: .5rem;
            display: flex;
            flex-direction: column;
            border-radius: .25rem;
            margin-bottom: .5rem;

            span{
                @include links();
                font-weight: bolder;
                text-transform: uppercase;
                margin-bottom: 0.75rem;
                height: 1.0625rem;
            }

            p{
                @include body1();
            }
        }

        .dialog-container.bot{
            background-color: $cinza-000;
        }

        .dialog-container.user{
            background-color: $vinho-p-000;
            align-self: flex-end;
            align-items: flex-end;
        }
    }

    @media (max-width: $max-sm){
        right: 0;
        width: 100%;
        height: 100%;
        z-index: 3000;
        bottom: 0;
    }
}

.open {
    transform: scaleY(1);
}

